17008 FIX View rendering: Prevent scrollbars from blocking view content
Views, e.g. "All hosts", are rendered with a scrollbar in case their content exceeds the given browser space. Scrollbars are rendered overlaying the content, which could result in some invisible and/or unclickable view content.

A views content is now given enough padding to the right and the bottom so the scrollbars do not block content anymore once users scroll the given content to the end.

SUP-22429 SUP-22395

--- a/web/htdocs/themes/facelift/scss/_dashboard.scss
+++ b/web/htdocs/themes/facelift/scss/_dashboard.scss
@@ -7,7 +7,7 @@
 body.dashboard {
   overflow: hidden;
 
-  &.main div#main_page_content {
+  &.main div#main_page_content:not(.simplebar-scrollable-x) {
     padding-bottom: 0;
   }
 
@@ -193,6 +193,22 @@ body.main.dashlet {
     div#dashlet_content_wrapper[data-simplebar="init"] {
       height: 100%;
       overflow: auto;
+
+      &.simplebar-scrollable-x div#data_container {
+        padding-bottom: $simplebar-track-width;
+      }
+
+      &.simplebar-scrollable-y div#data_container {
+        padding-right: $simplebar-track-width;
+      }
+
+      > div.simplebar-track.simplebar-horizontal {
+        height: $simplebar-track-width;
+
+        div.simplebar-scrollbar:before {
+          top: 3px;
+        }
+      }
     }
   }
 }
